--- a/pages/projeto1.html
+++ b/pages/projeto1.html
@@ -20,11 +20,12 @@
         </div>
     </header>
     <main>
-        <div id="tabuada-soma">
+        <div class="col-sm-4">
             <button class="btn btn-sucess" onclick="tabuada('soma')">
                 Gerar Tabuada da Soma
             </button>
-            
+            <div id="tabuada-soma"></div>
+
         </div>
 
     </main>
