--- a/pages/projeto1.html
+++ b/pages/projeto1.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/style.css">
-    
+    <script src="../js/functions.js"></script>
 </head>
 <body>
     <header>
@@ -20,15 +20,33 @@
         </div>
     </header>
     <main>
-        <div class="col-sm-4">
-            <button class="btn btn-sucess" onclick="tabuada('soma')">
-                Gerar Tabuada da Soma
-            </button>
-            <div id="tabuada-soma"></div>
-
+        <div class="row">
+            <div class="col-sm-3">
+                <button class="btn btn-sucess" onclick="tabuada('soma')">
+                    Gerar Tabuada da Soma
+                </button>
+                <div class="card-body" id="soma"></div>
+            </div>
+            <div class="col-sm-3">
+                <button class="btn btn-sucess" onclick="tabuada('subtracao')">
+                    Gerar Tabuada da Subtração
+                </button>
+                <div class="card-body" id="subtracao"></div>
+            </div>
+            <div class="col-sm-3">
+                <button class="btn btn-sucess" onclick="tabuada('multiplicacao')">
+                    Gerar Tabuada da Multiplicação
+                </button>
+                <div class="card-body" id="multiplicacao"></div>
+            </div>
+            <div class="col-sm-3">
+                <button class="btn btn-sucess" onclick="tabuada('divisao')">
+                    Gerar Tabuada da Divisão
+                </button>
+                <div class="card-body" id="divisao"></div>
+            </div>
         </div>
 
     </main>
-    <script src="../js/functions.js"></script>
 </body>
 </html>
