Feito front end do projeto calculadora

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 </div>
                 <p>Trabalhando com conceitos básicos de JavaScript</p>
                 <p>Variáveis, operadores, tipos de dados, alertas e etc...</p>
+                <p>Projeto Tabuada</p>
                 <div class="bottom-card">
                     <a href="./pages/projeto1.html" class="btn">Ver mais</a>
                 </div>
@@ -36,8 +37,9 @@
                 </div>
                 <p>Trabalhando com conceitos básicos de JavaScript</p>
                 <p>Funções, manipulação de formulários e estruturas de controle...</p>
+                <p>Projeto Calculadora</p>
                 <div class="bottom-card">
-                    <a href="#" class="btn">Ver mais</a>
+                    <a href="./pages/projeto2.html" class="btn">Ver mais</a>
                 </div>
             </div>
 
