--- a/pages/projeto2.html
+++ b/pages/projeto2.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../css/style.css">
+    <script src="../js/calc.js"></script>
 </head>
 <body>
     <style>
@@ -38,6 +39,7 @@
             padding: 15px;
             border-radius: 0.5rem;
             text-align: right;
+            color: #3f413d;
             height: 5vh;
             margin: 0.5rem;
         }
@@ -94,33 +96,33 @@
                         </td>
                     </tr>
                     <tr>
-                        <td><button class="calculatorButtons" id="cleanDisplay" value="C">C</td>
+                        <td><button class="calculatorButtons" id="cleanDisplay" value="C" onclick="cleanDisplay()">C</td>
                         <td><button class="calculatorButtons" id="deleteDigit" value="CE">CE</td>
-                        <td><button class="calculatorButtons" id="division" value="/">&divide;</td>
-                        <td><button class="calculatorButtons" id="multiplication" value="*">&times;</td>
+                        <td><button class="calculatorButtons" id="division" value="/" onclick="operator(value)">&divide;</td>
+                        <td><button class="calculatorButtons" id="multiplication" value="*" onclick="operator(value)">&times;</td>
                     </tr>
                     <tr>
-                        <td><button class="calculatorButtons" id="num7" value="7">7</td>
-                        <td><button class="calculatorButtons" id="num8" value="8">8</td>
-                        <td><button class="calculatorButtons" id="num9" value="9">9</td>
-                        <td><button class="calculatorButtons" id="subtraction" value="-">-</td>
+                        <td><button class="calculatorButtons" id="num7" value="7" onclick="firstNumber(value)">7</td>
+                        <td><button class="calculatorButtons" id="num8" value="8" onclick="firstNumber(value)">8</td>
+                        <td><button class="calculatorButtons" id="num9" value="9" onclick="firstNumber(value)">9</td>
+                        <td><button class="calculatorButtons" id="subtraction" value="-" onclick="operator(value)">-</td>
                     </tr>
                     <tr>
-                        <td><button class="calculatorButtons" id="num4" value="4">4</td>
-                        <td><button class="calculatorButtons" id="num5" value="5">5</td>
-                        <td><button class="calculatorButtons" id="num6" value="6">6</td>
-                        <td><button class="calculatorButtons" id="sum" value="+">+</td>
+                        <td><button class="calculatorButtons" id="num4" value="4" onclick="firstNumber(value)">4</td>
+                        <td><button class="calculatorButtons" id="num5" value="5" onclick="firstNumber(value)">5</td>
+                        <td><button class="calculatorButtons" id="num6" value="6" onclick="firstNumber(value)">6</td>
+                        <td><button class="calculatorButtons" id="sum" value="+" onclick="operator(value)">+</td>
                         
                     </tr>
                     <tr>
-                        <td><button class="calculatorButtons" id="num1" value="1">1</td>
-                        <td><button class="calculatorButtons" id="num2" value="2">2</td>
-                        <td><button class="calculatorButtons" id="num3" value="3">3</td>
-                        <td rowspan="2"><button class="calculatorButtons" id="result" value="=">=</td>
+                        <td><button class="calculatorButtons" id="num1" value="1" onclick="firstNumber(value)">1</td>
+                        <td><button class="calculatorButtons" id="num2" value="2" onclick="firstNumber(value)">2</td>
+                        <td><button class="calculatorButtons" id="num3" value="3" onclick="firstNumber(value)">3</td>
+                        <td rowspan="2"><button class="calculatorButtons" id="result" value="=" onclick="operation()">=</td>
                         
                     </tr>
                     <tr>
-                        <td colspan="2"><button class="calculatorButtons" id="num0" value="0">0</td>
+                        <td colspan="2"><button class="calculatorButtons" id="num0" value="0" onclick="firstNumber(value)">0</td>
                         <td><button class="calculatorButtons" id="point" value=".">.</td>
                     </tr>
                 </table>
