--- a/src/index.html
+++ b/src/index.html
@@ -55,6 +55,6 @@
             </div>
         </div>
     </main>
-    <!-- <script src="./js/scripts.js"></script> -->
+    <script src="./js/scripts.js"></script>
 </body>
 </html>
